--------------------------------------

- Fix calculation of free energy derivative in wjd().

- Add 'stay.normal' argument to equilibrate().

- If obigt$G is available, hkf() returns this value, not NA, at Tr, Pr.

- mod.obigt() defaults to taking chemical formula from the species name,
  and checks for validity of formula.

- Add example for LYSC_CHICK to protein.info.Rd.

CHANGES IN CHNOSZ 0.9-9 (2013-01-01)
------------------------------------

MAJOR CHANGES:

- Split the functionality of diagram() into equilibrate() and diagram().
  Old workflow: a <- affinity(); d <- diagram(a) .
  New workflow: a <- affinity(); e <- equilibrate(a); d <- diagram(e) .
  Old workflow is still usable for plotting the values of affinity, or
  for making predominance diagrams using the maximum affinity method.

- The 'thermo' object, which holds the thermodynamic database,
  and system definitions (made by the user), is now placed in an
  environment named 'CHNOSZ:thermo' on loading the package. Therefore, 
  instances of '<<-' in the code now refer to this environment
  instead of the global environment.

- Create a set of tests in 'inst/tests', particularly for functions that
  have been modified during this development cycle, and add a Suggests 
  dependency on 'testthat'.

- Move the code for the temperature and pressure derivatives of the "g"
  function (related to the solvation parameter omega) to a new function 
  gfun(); incorporate some fixes and a series of test_that() tests.
  There is some impact on the calculated Gibbs energies of charged
  species.

NEW FUNCTIONS:

- Add wjd() implementing the steepest descent algorithm for free energy
  minimization described by White et al., 1958. Also add supporting 
  functions element.potentials(), invertible.combs() for finding 
  linearly independent combinations of rows of a matrix, 
  is.near.equil(), and run.wjd().

- Add guess() as another supporting function for wjd(), to produce 